--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,16 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled,
+button:disabled:hover,
+button:disabled:active{
+  background-color: #ccc;
+  color: rgb(66, 53, 53);
+  border-color: #ccc;
+  cursor: not-allowed;
+}
+
+
 .form-actions {
   text-align: right;
 }
